--- a/dsbathWeb/src/main/resources/application.properties
+++ b/dsbathWeb/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+#server
+server.port=8081
+server.servlet.jsp.init-parameters.development=true
 
+#spring jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+#Encoding UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
+#database - mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://139.162.67.130:3306/dsbath?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=alwjd2514!@A
+
+#file
+sftp.host=139.162.67.130
+sftp.id=admin
+sftp.password=dleotks2580!%(!@A
+sftp.port=22
+sftp.filepath=/files
