--- a/dsbathWeb/pom.xml
+++ b/dsbathWeb/pom.xml
@@ -31,6 +31,13 @@
 		</dependency> 
 		-->
 		
+		<!-- jquery -->
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -57,6 +64,17 @@
             <version>3.0.8</version>
  		</dependency>
  		
+ 		<!-- JSP -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-jasper</artifactId>
+		    <scope>compile</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
