--- a/dsbathWeb/pom.xml
+++ b/dsbathWeb/pom.xml
@@ -50,6 +50,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- Mybatis -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+		
 		<!-- lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
