--- a/dsbathWeb/Dockerfile
+++ b/dsbathWeb/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:8-jdk-alpine
 
-ADD target/dsbathwab-0.0.1-SNAPSHOT.war dsbathwab.war
+ADD target/dsbathweb-0.0.1-SNAPSHOT.war dsbathweb.war
 
 EXPOSE 8081
 
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/dsbathwab.war"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/dsbathweb.war"]
