--- a/dsbathWeb/pom.xml
+++ b/dsbathWeb/pom.xml
@@ -24,6 +24,26 @@
 
 	<dependencies>
 		
+		<!-- commons -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		
+		<!-- gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+		
+		<!-- jcraft -->	
+		<dependency>
+	        <groupId>com.jcraft</groupId>
+	        <artifactId>jsch</artifactId>
+	        <version>0.1.54</version>
+    	</dependency>
+    	
 		<!-- Spring Security -->
 		<!-- 
 		<dependency>
